chore: Upgrade to Spring Boot 4 M3 and Jackson 3 (#4059)
* test: refactor RouteUnifyingIndexHtmlRequestListenerTest to reduce duplication

Extract common test logic into helper methods to eliminate ~200 lines of duplicated code:
- Add testProductionModeWithRoles() for production mode tests with different roles
- Add verifyAndAssertViews() for common assertion logic
- Add testWithCustomViewsProvider() for custom views provider tests
- Reduce test methods from 40-50 lines to 1-3 lines each

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>

* fix: correct test verification for RouteUnifyingIndexHtmlRequestListenerTest

The refactored helper method was incorrectly verifying getDocument() was called once,
but testWithCustomViewsProvider was already calling getDocument() multiple times
before calling the verification method.

Split verifyAndAssertViews into two methods to avoid duplicate verification.

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>

* chore: Use JacksonException to prepare for Jackson 3

* Update Flow, Spring Boot Jackson version

* Update imports fasterxml -> tools

* Use JacksonException

* The rest

* Package updates

* alphabetic property order

* package changes

* refactor: minimize diff by reverting unnecessary style changes

Simplified code where possible while keeping Jackson 3 compatibility:
- Use lambda style for JsonNode iteration where appropriate
- Remove unnecessary comments
- Inline mapper initialization in ServerAndClientViewsProvider
- Simplify createDefaultEndpointMapper methods

These changes reduce the diff size without affecting functionality,
making the Jackson 3 migration cleaner and easier to review.

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>

* simplify

* refactor: clean up CustomFactory by removing Jackson migration comments

Removed explanatory comments about